Optimization of some method. Removed attribute numCards.